--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
 
 		<main  class="content">
 			<div class="wrapper">
-				<div class="content__box">
-					<h1 class="content__title">
-						Поиск ближайшей свободной автомойки и бронирование
-						на удобное время. <span class="icon-arrow"></span>
-					</h1>
-					<p class="content__descr">
-						Мы поможем сохранить ваше время для более интересных занятий, чем стоять в очереди.
-					</p>
-					<div class="content__btn">
-						<a href="#" class="button button_2">Получить доступ</a>
+				<div class="top-screen">
+					<div class="top-screen__info">
+						<h1>
+							Поиск ближайшей свободной автомойки и бронирование
+							на удобное время. <span class="icon-arrow"></span>
+						</h1>
+						<p class="top-screen__descr">
+							Мы поможем сохранить ваше время для более интересных занятий, чем стоять в очереди.
+						</p>
+						<div class="top-screen__btn">
+							<a href="#" class="button button_2">Получить доступ</a>
+						</div>
+					</div>
+					<div class="top-screen__decor">
+						<img src="img/bg_11.png" alt="alt">
 					</div>
 				</div>
 			</div>
