--- a/index.html
+++ b/index.html
@@ -35,11 +35,177 @@
 						</div>
 					</div>
 					<div class="top-screen__decor">
-						<img src="img/bg_11.png" alt="alt">
+						<img src="img/bg_1.png" alt="alt">
 					</div>
 				</div>
-			</div>
-		</main>	
+				<div class="start">
+					<div class="start__decor">
+						<img class="start__img" src="img/bg_2.png" alt="alt">
+					</div>
+					<div class="start__info">
+						<h2>
+							Быстрый старт:
+						</h2>
+						<ul class=" info-list">
+							<li class="info-list__item">
+								<div class="info-list__icon"><span class="icon-download"></span></div>
+								<div class="info-list__info">
+									<div class="info-list__title">Скачай и зарегистрируйся</div>
+									<p class="info-list__text">Наше приложение доступно в Apple Store и Google Play</p>
+								</div>
+							</li>
+							<li class="info-list__item">
+								<div class="info-list__icon"><span class="icon-location"></span></div>
+								<div class="info-list__info">
+									<div class="info-list__title">Выбери ближайшую автомойку</div>
+									<p class="info-list__text">Из свободных поблизости или оставь заказ на удобное время</p>
+								</div>
+							</li>
+							<li class="info-list__item">
+								<div class="info-list__icon"><span class="icon-filter"></span></div>
+								<div class="info-list__info">
+									<div class="info-list__title">Выбери дополнительные услуги</div>
+									<p class="info-list__text">Можешь их добавить к своему основному заказу</p>
+								</div>
+							</li>
+							<li class="info-list__item">
+								<div class="info-list__icon"><span class="icon-wallet"></span></div>
+								<div class="info-list__info">
+									<div class="info-list__title">Оплати внутри приложения </div>
+									<p class="info-list__text">Бесконтактная оплата внутри приложения и прозрачные цены</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="partners">
+					<h3 class="partners__title">Стань нашим партнером и начни зарабатывать: </h3>
+					<p class="partners__text">Автоматизируй свой бизнес вместе с нами. Подключись к нашей системе бронирования, что бы получать новых клиентов и распределить нагрузку равномерно на весь день. Мы предоставляем удобные инструменты для формирования отчетов в несколько кликов и многое другое.</p>
+					<ul class="info-list info-list_2">
+						<li class="info-list__item info-list__item_2">
+							<div class="info-list__icon info-list__icon_2"><span class="icon-document"></span></div>
+							<div class="info-list__info">
+								<p class="info-list__text info-list__text_2">Просмотривайте историю заказа</p>
+							</div>
+						</li>
+						<li class="info-list__item info-list__item_2">
+							<div class="info-list__icon info-list__icon_2"><span class="icon-calendar"></span></div>
+							<div class="info-list__info">
+								<p class="info-list__text info-list__text_2">Создание отчета неделя/месяц/год </p>
+							</div>
+						</li>
+						<li class="info-list__item info-list__item_2">
+							<div class="info-list__icon info-list__icon_2"><span class="icon-chat"></span></div>
+							<div class="info-list__info">
+								<p class="info-list__text info-list__text_2">Обратная связь от&nbsp;клиентов</p>
+							</div>
+						</li>
+						<li class="info-list__item info-list__item_2">
+							<div class="info-list__icon info-list__icon_2"><span class="icon-star"></span></div>
+							<div class="info-list__info">
+								<p class="info-list__text info-list__text_2">Контроль качества работы сотрудников</p>
+							</div>
+						</li>
+						<li class="info-list__item info-list__item_2">
+							<div class="info-list__icon info-list__icon_2"><span class="icon-wallet"></span></div>
+							<div class="info-list__info">
+								<p class="info-list__text info-list__text_2">Бесконтактная оплата работы</p>
+							</div>
+						</li>
+					</ul>
+					<div class="partners__btn">
+						<a href="#" class="button button_2">Стать партнером</a>
+					</div>
+				</div>
+				<div class="app">
+					<div class="app__box">
+						<div class="app__info">
+							<h3 class="app__title">Хватит тратить свое время в очередях</h3>
+							<p class="app__text">Приложение скоро будет доступно для бета тестирования в AppStore и Google Play</p>
+							<div class="app__img">
+								<a href="#" class="app__link">
+									<img src="img/ap.svg" alt="alt">
+								</a>
+								<a href="#" class="app__link">
+									<img src="img/gp.svg" alt="alt">
+								</a>
+							</div>
+						</div>
+						<div class="app__decor">
+							<img src="img/bg_3.png" alt="alt">
+						</div>
+					</div>
+				</div>
+				<div class="reviews">
+					<h2 class="reviews__title">
+						Отзывы о приложении
+					</h2>
+					<div class="slider">
+						<div class="slider__item">
+							<p class="slider__text">Таким образом консультация с широким активом влечет за собой процесс внедрения и модернизации направлений прогрессивного развития. Разнообразный и богатый опыт сложившаяся структура организации обеспечивает широкому кругу (специалистов) участие в формировании модели развития.</p>
+							<div class="slider__human">
+								<div class="slider__human-photo">
+									<img src="img/photo1.jpg" alt="alt">
+								</div>
+								<div class="slider__human-info">
+									<div class="slider__human-name">John Doe</div>
+									<div class="slider__human-position">Водитель</div>
+								</div>
+							</div>
+						</div>
+						<div class="slider__item">
+							<p class="slider__text">"Буду бить аккуратно, но сильно!";
+								"Дитям – мороженое, его бабе – цветы! Смотри не перепутай, Кутузов!"; "На чужой счёт пьют даже трезвенники… и язвенники!"; "Начинаю действовать бэз шуму и пыли по вновь утверждённому плану!";</p>
+							<div class="slider__human">
+								<div class="slider__human-photo">
+									<img src="img/photo2.jpg" alt="alt">
+								</div>
+								<div class="slider__human-info">
+									<div class="slider__human-name">Анатолий Папанов</div>
+									<div class="slider__human-position">Таксист</div>
+								</div>
+							</div>
+						</div>
+						<div class="slider__item">
+							<p class="slider__text">Задача организации, в особенности же разбавленное изрядной долей эмпатии, рациональное мышление однозначно определяет каждого участника как способного принимать собственные решения касаемо форм воздействия. Являясь всего лишь частью общей картины, сторонники</p>
+							<div class="slider__human">
+								<div class="slider__human-photo">
+									<img src="img/photo3.jpg" alt="alt">
+								</div>
+								<div class="slider__human-info">
+									<div class="slider__human-name">Даниэль Моралес</div>
+									<div class="slider__human-position">Таксист</div>
+								</div>
+							</div>
+						</div>
+						<div class="slider__item">
+							<p class="slider__text">Принимая во внимание показатели успешности, внедрение современных методик требует анализа распределения внутренних резервов и ресурсов. Разнообразный и богатый опыт говорит нам, что реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов)</p>
+							<div class="slider__human">
+								<div class="slider__human-photo">
+									<img src="img/photo4.jpg" alt="alt">
+								</div>
+								<div class="slider__human-info">
+									<div class="slider__human-name">Джейсон Стэйтем</div>
+									<div class="slider__human-position">Перевозчик</div>
+								</div>
+							</div>
+						</div>
+						<div class="slider__item">
+							<p class="slider__text">Приятно, граждане, наблюдать, как независимые государства набирают популярность среди определенных слоев населения, а значит, должны быть указаны как претенденты на роль ключевых факторов. Как принято считать, базовые сценарии поведения пользователей</p>
+							<div class="slider__human">
+								<div class="slider__human-photo">
+									<img src="img/photo5.jpg" alt="alt">
+								</div>
+								<div class="slider__human-info">
+									<div class="slider__human-name">Владимир Путин</div>
+									<div class="slider__human-position">Президент</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div><!-- wrapper -->
+		</main>
 
 		<!-- CONTENT EOF   -->
 
@@ -55,16 +221,8 @@
 						<a href="#" class="nav__link">Скачать</a>
 						<a href="#" class="nav__link">Отзывы</a>
 					</nav>
-
 					<a href="#" class="button">Получить доступ</a>
-
-
-
 				</div>
-			</div>
-
-			<div class="wrapper">
-
 			</div>
 		</header>
 
@@ -74,8 +232,17 @@
 
 		<footer class="footer">
 			<div class="wrapper">
-
-			</div>	
+				<div class="header__box">
+					<div class="logo"><img class="logo__img" src="img/logo_footer.svg" alt="logo"></div>
+					<nav class="nav">
+						<a href="#" class="nav__link nav__link_footer">Как использовать </a>
+						<a href="#" class="nav__link nav__link_footer">Партнерам</a>
+						<a href="#" class="nav__link nav__link_footer">Скачать</a>
+						<a href="#" class="nav__link nav__link_footer">Отзывы</a>
+					</nav>
+					<a href="#" class="button button_footer">Получить доступ</a>
+				</div>
+			</div>
 		</footer>
 
 		<!-- FOOTER EOF   -->
@@ -88,7 +255,7 @@
 
 	<script src="js/jquery-3.0.0.min.js"></script>			
 	<script src="js/jquery-migrate-1.4.1.min.js"></script>
+	<script src="js/components/slick.js"></script>
 	<script src="js/custom.js" ></script>
-</script>
 </body>
 </html>
