--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
 									<img src="img/photo5.jpg" alt="alt">
 								</div>
 								<div class="slider__human-info">
-									<div class="slider__human-name">Владимир Путин</div>
-									<div class="slider__human-position">Президент</div>
+									<div class="slider__human-name">Петр Иванович</div>
+									<div class="slider__human-position">Дачник</div>
 								</div>
 							</div>
 						</div>
@@ -256,6 +256,7 @@
 	<script src="js/jquery-3.0.0.min.js"></script>			
 	<script src="js/jquery-migrate-1.4.1.min.js"></script>
 	<script src="js/components/slick.js"></script>
+	<script src="js/components/fancybox.js"></script>
 	<script src="js/custom.js" ></script>
 </body>
 </html>
