--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<div class="top-screen__info">
 						<h1>
 							Поиск ближайшей свободной автомойки и бронирование
-							на удобное время. <span class="icon-arrow desct"></span>
+							на&nbsp;удобное время. <span class="icon-arrow desct"></span>
 						</h1>
 						<span class="icon icon-arrow_down mob"></span>
 						<p class="top-screen__descr">
@@ -51,28 +51,28 @@
 						</h2>
 						<ul class=" info-list">
 							<li class="info-list__item">
-								<div class="info-list__icon"><span class="icon-download"></span></div>
+								<div class="info-list__icon"><span class="icon icon-download"></span></div>
 								<div class="info-list__info">
 									<div class="info-list__title">Скачай и зарегистрируйся</div>
-									<p class="info-list__text">Наше приложение доступно в Apple Store и Google Play</p>
+									<p class="info-list__text">Наше приложение доступно в Apple&nbsp;Store и Google&nbsp;Play</p>
 								</div>
 							</li>
 							<li class="info-list__item">
-								<div class="info-list__icon"><span class="icon-location"></span></div>
+								<div class="info-list__icon"><span class="icon icon-location"></span></div>
 								<div class="info-list__info">
 									<div class="info-list__title">Выбери ближайшую автомойку</div>
 									<p class="info-list__text">Из свободных поблизости или оставь заказ на удобное время</p>
 								</div>
 							</li>
 							<li class="info-list__item">
-								<div class="info-list__icon"><span class="icon-filter"></span></div>
+								<div class="info-list__icon"><span class="icon icon-filter"></span></div>
 								<div class="info-list__info">
 									<div class="info-list__title">Выбери дополнительные услуги</div>
 									<p class="info-list__text">Можешь их добавить к своему основному заказу</p>
 								</div>
 							</li>
 							<li class="info-list__item">
-								<div class="info-list__icon"><span class="icon-wallet"></span></div>
+								<div class="info-list__icon"><span class="icon icon-wallet"></span></div>
 								<div class="info-list__info">
 									<div class="info-list__title">Оплати внутри приложения </div>
 									<p class="info-list__text">Бесконтактная оплата внутри приложения и прозрачные цены</p>
@@ -83,35 +83,39 @@
 				</div>
 				<div class="partners">
 					<h3 class="partners__title">Стань нашим партнером и начни зарабатывать: </h3>
-					<p class="partners__text">Автоматизируй свой бизнес вместе с нами. Подключись к нашей системе бронирования, что бы получать новых клиентов и распределить нагрузку равномерно на весь день. Мы предоставляем удобные инструменты для формирования отчетов в несколько кликов и многое другое.</p>
+					<p class="partners__text">Автоматизируй свой бизнес <br class="mob">вместе с нами.
+						<span class="br mob"></span>					
+						Подключись к нашей системе бронирования, что бы получать новых клиентов и распределить нагрузку равномерно на весь день. 
+						<span class="br mob"></span>	
+					Мы предоставляем удобные инструменты для формирования отчетов в несколько кликов и многое другое.</p>
 					<ul class="info-list info-list_2">
 						<li class="info-list__item info-list__item_2">
-							<div class="info-list__icon info-list__icon_2"><span class="icon-document"></span></div>
-							<div class="info-list__info">
+							<div class="info-list__icon info-list__icon_2"><span class="icon icon-document"></span></div>
+							<div class="info-list__info info-list__info_2">
 								<p class="info-list__text info-list__text_2">Просмотривайте историю заказа</p>
 							</div>
 						</li>
 						<li class="info-list__item info-list__item_2">
-							<div class="info-list__icon info-list__icon_2"><span class="icon-calendar"></span></div>
-							<div class="info-list__info">
+							<div class="info-list__icon info-list__icon_2"><span class="icon icon-calendar"></span></div>
+							<div class="info-list__info info-list__info_2">
 								<p class="info-list__text info-list__text_2">Создание отчета неделя/месяц/год </p>
 							</div>
 						</li>
 						<li class="info-list__item info-list__item_2">
-							<div class="info-list__icon info-list__icon_2"><span class="icon-chat"></span></div>
-							<div class="info-list__info">
+							<div class="info-list__icon info-list__icon_2"><span class="icon icon-chat"></span></div>
+							<div class="info-list__info info-list__info_2">
 								<p class="info-list__text info-list__text_2">Обратная связь от&nbsp;клиентов</p>
 							</div>
 						</li>
 						<li class="info-list__item info-list__item_2">
-							<div class="info-list__icon info-list__icon_2"><span class="icon-star"></span></div>
-							<div class="info-list__info">
+							<div class="info-list__icon info-list__icon_2"><span class="icon icon-star"></span></div>
+							<div class="info-list__info info-list__info_2">
 								<p class="info-list__text info-list__text_2">Контроль качества работы сотрудников</p>
 							</div>
 						</li>
 						<li class="info-list__item info-list__item_2">
-							<div class="info-list__icon info-list__icon_2"><span class="icon-wallet"></span></div>
-							<div class="info-list__info">
+							<div class="info-list__icon info-list__icon_2"><span class="icon icon-wallet"></span></div>
+							<div class="info-list__info info-list__info_2">
 								<p class="info-list__text info-list__text_2">Бесконтактная оплата работы</p>
 							</div>
 						</li>
@@ -124,18 +128,19 @@
 					<div class="app__box">
 						<div class="app__info">
 							<h3 class="app__title">Хватит тратить свое время в очередях</h3>
-							<p class="app__text">Приложение скоро будет доступно для бета тестирования в AppStore и Google Play</p>
+							<p class="app__text">Приложение скоро будет доступно для бета тестирования в App&nbsp;Store и Google&nbsp;Play</p>
 							<div class="app__img">
 								<a href="#" class="app__link">
-									<img src="img/ap.svg" alt="alt">
+									<img src="img/ap.svg" alt="alt" width="162px" height="50px">
 								</a>
 								<a href="#" class="app__link">
-									<img src="img/gp.svg" alt="alt">
+									<img src="img/gp.svg" alt="alt" width="162px" height="50px">
 								</a>
 							</div>
 						</div>
 						<div class="app__decor">
-							<img src="img/bg_3.png" alt="alt">
+							<img class="desct" src="img/bg_3.png" alt="alt">
+							<img class="mob" src="img/bg_3-mob.png" alt="alt">
 						</div>
 					</div>
 				</div>
@@ -228,10 +233,13 @@
 							<a href="#" class="nav__link">Скачать</a>
 							<a href="#" class="nav__link">Отзывы</a>
 						</nav>
-						<div class="btn-mob">
-							<a data-fancybox href="#win_1"class="button button_2">Получить доступ</a>
+						<div class="header__btn-box mob">
+							<a data-fancybox href="#win_1"class="button button_2">Стать партнером</a>
 						</div>
-						<a data-fancybox href="#win_1"class="button">Получить доступ</a>
+						<div class="header__btn-box">
+							<a data-fancybox href="#win_1"class="button">Получить доступ</a>
+						</div>
+						
 					</div>
 				</div>
 			</div>
@@ -243,8 +251,8 @@
 
 		<footer class="footer">
 			<div class="wrapper">
-				<div class="header__box">
-					<div class="logo"><img class="logo__img" src="img/logo_footer.svg" alt="logo"></div>
+				<div class="header__box header__box_footer">
+					<div class="logo logo_footer"><img class="logo__img" src="img/logo_footer.svg" alt="logo"></div>
 					<nav class="nav">
 						<a href="#" class="nav__link nav__link_footer">Как использовать </a>
 						<a href="#" class="nav__link nav__link_footer">Партнерам</a>
