--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
 							<p class="app__text">Приложение скоро будет доступно для бета тестирования в App&nbsp;Store и Google&nbsp;Play</p>
 							<div class="app__img">
 								<a href="#" class="app__link">
-									<img src="img/ap.svg" alt="alt" width="162px" height="50px">
+									<img src="img/ap.svg" alt="alt">
 								</a>
 								<a href="#" class="app__link">
-									<img src="img/gp.svg" alt="alt" width="162px" height="50px">
+									<img src="img/gp.svg" alt="alt">
 								</a>
 							</div>
 						</div>
@@ -234,10 +234,10 @@
 							<a href="#" class="nav__link">Отзывы</a>
 						</nav>
 						<div class="header__btn-box mob">
-							<a data-fancybox href="#win_1"class="button button_2">Стать партнером</a>
+							<a data-fancybox href="#win_1" class="button button_2">Стать партнером</a>
 						</div>
 						<div class="header__btn-box">
-							<a data-fancybox href="#win_1"class="button">Получить доступ</a>
+							<a data-fancybox href="#win_1" class="button">Получить доступ</a>
 						</div>
 						
 					</div>
