--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 						и&nbsp;начни зарабатывать:
 					</h3>
 					<div class="box-form">
-						<form>
+						<form class="js-send-form">
 							<div class="box-field">
 								<label for="name" class="box-field__label">
 									<span class="icon icon-edit"></span>
@@ -294,11 +294,11 @@
 								</div>
 							</div>
 							<div class="box-field">
-								<label for="tel" class="box-field__label">
+								<label for="phone" class="box-field__label">
 									<span class="icon icon-call"></span>
 								</label>
 								<div class="box-field__input">
-									<input id="tel" type="tel" class="form-control" placeholder="Номер телефона">
+									<input id="phone" type="tel" class="form-control" placeholder="Номер телефона">
 								</div>
 							</div>
 							<ul class="list-check">
@@ -322,7 +322,7 @@
 								</li>
 							</ul>
 							<div class="box-form__btn">
-								<a href="#" class="button button_2">Получить доступ</a>
+								<input type="submit" class="button button_2" value="Получить доступ">
 							</div>
 						</form>
 						<div class="politic">
