--- a/index.html
+++ b/index.html
@@ -322,7 +322,8 @@
 								</li>
 							</ul>
 							<div class="box-form__btn">
-								<input type="submit" class="button button_2" value="Получить доступ">
+								<!-- <input type="submit" class="button button_2" value="Получить доступ"> -->
+								<a href="#" class="button button_2">Получить доступ</a>
 							</div>
 						</form>
 						<div class="politic">
