--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 						и&nbsp;начни зарабатывать:
 					</h3>
 					<div class="box-form">
-						<form class="js-send-form">
+						<form class="js-send-form" id="js-send-form">
 							<div class="box-field">
 								<label for="name" class="box-field__label">
 									<span class="icon icon-edit"></span>
@@ -323,7 +323,7 @@
 							</ul>
 							<div class="box-form__btn">
 								<!-- <input type="submit" class="button button_2" value="Получить доступ"> -->
-								<a href="#" class="button button_2">Получить доступ</a>
+								<a href="#" onclick="document.getElementById('js-send-form').submit(); return false;" class="button button_2">Получить доступ</a>
 							</div>
 						</form>
 						<div class="politic">
